# ZPE-FT

./: .gitignore  .zenodo.json  AUDITOR_PLAYBOOK.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  COMPLETION_REPORT_V6.md  CONTRIBUTING.md  GOVERNANCE.md  MISSING_DATA_README.md  Makefile  PUBLIC_AUDIT_LIMITS.md  README.md  RELEASING.md  REPRODUCIBILITY.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/workflows/: ci.yml  package-verification.yml  publish.yml
core/: Cargo.toml
core/src/: lib.rs
data/ticks/: README.md  tick_fetch_status.json
docs/: ARCHITECTURE.md  AUDITOR_PLAYBOOK.md  DOC_REGISTRY.md  FAQ.md  INTEGRATION_PATTERN.md  LEGAL_BOUNDARIES.md  PUBLIC_AUDIT_LIMITS.md  README.md  SUPPORT.md  market_surface.json
docs/_reorientation/2026-04-17/: FIX_LOG.md  NOVELTY_CARD.md  OPEN_QUESTIONS.md
docs/examples/: alpaca_corpus_request.example.json  phase06_benchmark_request.example.json  real_market_corpus_spec.example.json  real_market_query_catalog.example.json
docs/specs/: ZPFIN_SPEC.md
examples/: ohlcv_compress.py  tick_replay.py
poc/logs/: env_check.json
poc/logs/env_check_phase1/: env_check.json
poc/logs/env_check_phase1_venv/: env_check.json
poc/scripts/: 00_env_check.py
proofs/: CONSOLIDATED_PROOF_REPORT.md  FINAL_STATUS.md  HISTORICAL_PATH_LIMITS.md  PHASE3_PUBLIC_BENCHMARKS.json  PHASE3_PUBLIC_BENCHMARKS.md
proofs/artifacts/2026-02-21_ft_wave1_final/: before_after_metrics.json  claim_status_delta.md  determinism_replay_results.json  ft_db_roundtrip_results.json  ft_ohlcv_benchmark.json  ft_pattern_search_eval.json  ft_query_latency_benchmark.json  ft_reconstruction_fidelity.json  ft_tick_benchmark.json  gorilla_eval_results.json  integration_readiness_contract.json  net_new_gap_closure_matrix.json  quality_gate_scorecard.json  residual_risk_register.md
proofs/artifacts/operations/: 20260321T160048Z_free_source_feasibility_probe.json  20260321T160950Z_codex_receipt.md  20260321T221030Z_codex_receipt.md  20260321T221030Z_docs_falsification_report.md  20260321T231442Z_codex_receipt.md  20260321T231442Z_docs_falsification_report.md  (+3 more)
proofs/logs/: 2026-02-21_gate_b_test_results.txt  2026-02-21_operator_command_log_historical.txt  README.md
proofs/phase06_inputs/: README.md  series_gap_matrix.csv
proofs/reruns/: 2026-02-21_runpod_readiness_manifest.json  2026-02-21_tsbs_db_benchmark_results.json  README.md
proofs/runbooks/: 20260321T202304Z_repo_technical_alignment_plan.md  README.md  REPO_TECHNICAL_ALIGNMENT_EXECUTION_PROMPT.md  REPO_TECHNICAL_EXECUTION_SUPPLEMENT.md  RUNBOOK_ZPE_FT_GATE_A.md  RUNBOOK_ZPE_FT_GATE_B.md  RUNBOOK_ZPE_FT_GATE_C.md  RUNBOOK_ZPE_FT_GATE_D.md  RUNBOOK_ZPE_FT_GATE_E.md  RUNBOOK_ZPE_FT_MASTER.md  ZER0PA_REPO_DOCS_PLAYBOOK_CANONICAL_2026-03-21.md
python/zpe_finance/: __init__.py  alpaca.py  codec.py  comet_logging.py  comparators.py  corpus.py  data.py  db_adapter.py  feeds.py  metrics.py  packet.py  patterns.py  public_benchmarks.py  rust_bridge.py  schema.py  search.py  tracking.py
scripts/: build_handoff_artifacts.py  check_truth_surface.py  common.py  fetch_alpaca_corpus.py  fetch_dukascopy_ticks.py  freeze_real_market_corpus.py  gate_a_freeze.py  run_appendix_e_ingestion.py  run_determinism_replay.py  run_gate_b_fidelity.py  run_gate_c_benchmarks.py  run_gate_d_falsification.py  run_gate_e_db_roundtrip.py  run_gate_m1_gorilla.py  run_gate_m2_tsbs_db.py  run_gate_m3_zipline.py  run_gate_m4_compliance.py  run_latency_benchmark.py  run_pattern_eval.py  run_phase06_partial.py  run_public_market_benchmarks.py  run_real_market_refresh.py  run_wave1.py
tests/: test_adversarial.py  test_alpaca.py  test_clean_install.py  test_codec_core.py  test_comet_logging.py  test_examples.py  test_ohlcv_roundtrip.py  test_packet_roundtrip.py  test_phase06_partial_scripts.py  test_public_benchmarks.py  test_real_market_corpus.py  test_real_market_refresh_extras.py  test_tracking.py
(+101 files in other folders)
