[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zpe-ft"
version = "0.1.0"
description = "ZPE financial time-series codec and pattern search"
readme = "README.md"
license = "LicenseRef-Zer0pa-SAL-7.0"
requires-python = ">=3.11"
authors = [{name = "Zer0pa (Pty) Ltd", email = "architects@zer0pa.ai"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering",
]
keywords = ["financial-time-series", "market-data", "compression", "deterministic-replay", "pattern-search"]
dependencies = [
  "numpy>=2.1",
]

[project.urls]
Homepage = "https://github.com/Zer0pa/ZPE-FT"
Documentation = "https://github.com/Zer0pa/ZPE-FT#readme"
Repository = "https://github.com/Zer0pa/ZPE-FT"
Issues = "https://github.com/Zer0pa/ZPE-FT/issues"
Changelog = "https://github.com/Zer0pa/ZPE-FT/blob/main/CHANGELOG.md"

[project.optional-dependencies]
market = ["pandas>=2.2,<3", "yfinance>=0.2.66"]
comparators = ["duckdb>=1.2", "lz4>=4.4.4", "zstandard>=0.23.0"]
observability = ["comet_ml>=3.0.0", "opik>=1.10"]
native = ["maturin>=1.8"]
docs = ["mkdocs>=1.6"]
proof = [
  "duckdb>=1.2",
  "lz4>=4.4.4",
  "pandas>=2.2,<3",
  "pandas_datareader>=0.10.0",
  "requests>=2.32",
  "scikit-learn>=1.5",
  "scipy>=1.13",
  "yfinance>=0.2.66",
  "zstandard>=0.23.0",
  "kagglehub>=1.0.0",
]
test = ["build>=1.4.2", "pytest>=8.0"]
dev = [
  "build>=1.4.2",
  "duckdb>=1.2",
  "lz4>=4.4.4",
  "pandas>=2.2,<3",
  "pandas_datareader>=0.10.0",
  "pytest>=8.0",
  "requests>=2.32",
  "scikit-learn>=1.5",
  "scipy>=1.13",
  "yfinance>=0.2.66",
  "zstandard>=0.23.0",
  "kagglehub>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
pythonpath = ["python"]
addopts = "-q"
